Add changes to successful work
For the correct work and operation of the application, I changed the JavaConfig
configuration and instead of using db and hibernate.properties, I
started using static final variables. In addition, I edited the html
page's for correct display. And in general, I changed the rest of the
files so that they correctly and correctly performed their role

--- a/src/webapp/WEB-INF/pages/helloList.html
+++ b/src/webapp/WEB-INF/pages/helloList.html
@@ -23,13 +23,17 @@
     </thead>
     <tbody>
         <tr th:each="user : ${users}">
-            <td th:text="${user.getId()}" th:href="/user">id</td>
-            <td th:text="${user.getName()}">name</td>
-            <td th:text="${user.getLastName()}">surname</td>
-            <td th:text="${user.getAge()}">age</td>
+            <td><a th:href="@{'/' + ${user.getId()}}" th:text="${user.getId()}">Id</a></td>
+            <td th:text="${user.getName()}">Name</td>
+            <td th:text="${user.getLastName()}">Surname</td>
+            <td th:text="${user.getAge()}">Age</td>
         </tr>
     </tbody>
 </table>
-
+<br>
+<button type="submit" onclick="window.location.href = '/new' ">
+    Add User
+</button>
+<br>
 </body>
 </html>
