--- a/src/webapp/WEB-INF/pages/create.html
+++ b/src/webapp/WEB-INF/pages/create.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1>Add User</h1>
-<form action="#" method="POST" th:action="@{/new}" th:object="${user}">
+<form  th:method="POST" th:action="@{/new}" th:object="${user}">
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
         <tr>
@@ -23,16 +23,19 @@
         <tbody>
         <td>
             <label for="name">Enter name</label>
-            <input type="text" th:field="*{name}" id="name" required/>
+            <input type="text" th:field="*{name}" id="name"/>
         </td>
+        <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" >name error</div>
         <td>
             <label for="surname">Enter surname</label>
             <input type="text" th:field="*{lastName}" id="surname"/>
         </td>
+        <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">lastName error</div>
         <td>
             <label for="age">Enter age</label>
             <input type="number" min="0" max="127" th:field="*{age}" id="age">
         </td>
+        <div style="color:red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">age error</div>
         </tbody>
     </table>
     <button type="submit" onclick="window.location.href = '/'">
@@ -41,6 +44,5 @@
 <br>
 <br>
 <button onclick="window.location.href = '/'">Back to users</button>
-
 </body>
 </html>
