--- a/src/webapp/WEB-INF/pages/edit.html
+++ b/src/webapp/WEB-INF/pages/edit.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1>Edit User</h1>
-<form action="#" method="POST" th:action="@{/new}" th:object="${user}">
+<form th:method="PATCH" th:action="@{/edit}" th:object="${user}">
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
         <tr>
@@ -23,16 +23,19 @@
         <tbody>
         <td>
             <label for="name">Edit name</label>
-            <input type="text" th:field="*{name}" id="name" required/>
+            <input type="text" th:field="*{name}" id="name"/>
         </td>
+        <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" >name error</div>
         <td>
             <label for="surname">Edit surname</label>
             <input type="text" th:field="*{lastName}" id="surname"/>
         </td>
+        <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">lastName error</div>
         <td>
             <label for="age">Edit age</label>
             <input type="number" min="0" max="127" th:field="*{age}" id="age">
         </td>
+        <div style="color:red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">age error</div>
         </tbody>
     </table>
 
@@ -41,7 +44,7 @@
 </button>
 <br>
 <br>
-<button onclick="window.location.href = '/';">Back to users</button>
+<button onclick="window.location.href = '/'">Back to users</button>
 
 </body>
 </html>
