--- a/src/webapp/WEB-INF/pages/edit.html
+++ b/src/webapp/WEB-INF/pages/edit.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1>Edit User</h1>
-<form th:method="PATCH" th:action="@{/edit}" th:object="${user}">
+<form th:method="PATCH" th:action="@{/edit/{id}(id=${user.getId()})}" th:object="${user}">
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
         <tr>
@@ -24,18 +24,18 @@
         <td>
             <label for="name">Edit name</label>
             <input type="text" th:field="*{name}" id="name"/>
+            <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" >name error</div>
         </td>
-        <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" >name error</div>
         <td>
             <label for="surname">Edit surname</label>
             <input type="text" th:field="*{lastName}" id="surname"/>
+            <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">lastName error</div>
         </td>
-        <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">lastName error</div>
         <td>
             <label for="age">Edit age</label>
             <input type="number" min="0" max="127" th:field="*{age}" id="age">
+            <div style="color:red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">age error</div>
         </td>
-        <div style="color:red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">age error</div>
         </tbody>
     </table>
 
